patch 1: basic readme, wrapper library to check-find-fetch glfw
* cmake find glfw initial

* fix temp directory not needed

* find glf3 quiet

* patch 1

* add basic README

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -1,7 +1,23 @@
-set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(CMAKE_CXX_EXTENSIONS OFF)
+set( CMAKE_CXX_STANDARD 17 )
+set( CMAKE_CXX_STANDARD_REQUIRED ON )
+set( CMAKE_CXX_EXTENSIONS OFF )
 
-# add_library(${SON8PROJ}) | add_executable(${SON8PROJ})
+add_library( ${SON8PROJ} INTERFACE )
 # target_sources(${SON8PROJ})
-message(FATAL_ERROR "${CMAKE_CURRENT_LIST_FILE}:${CMAKE_CURRENT_LIST_LINE}\n change project name and remove this line")
+
+if( NOT TARGET glfw )
+    message( STATUS "${SON8PROJ}: `glfw` target does not exist try to find it" )
+    find_package( glfw3 QUIET )
+    if( NOT glfw3_FOUND )
+        message( STATUS "${SON8PROJ}: `glfw3_FOUND` is not set, try to fetch it from son8fork" )
+        include( FetchContent )
+        FetchContent_Declare(
+            glfw
+            GIT_REPOSITORY https://github.com/son8fork/glfw.git
+            GIT_TAG        son8fork-030310
+        )
+        FetchContent_MakeAvailable( glfw )
+    endif()
+endif()
+
+target_link_libraries( ${SON8PROJ} INTERFACE glfw )
