change cmake project not to be interface

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -2,8 +2,10 @@ set( CMAKE_CXX_STANDARD 17 )
 set( CMAKE_CXX_STANDARD_REQUIRED ON )
 set( CMAKE_CXX_EXTENSIONS OFF )
 
-add_library( ${SON8PROJ} INTERFACE )
-# target_sources(${SON8PROJ})
+add_library( ${SON8PROJ} )
+target_sources( ${SON8PROJ} PRIVATE
+    windowed.cxx
+)
 
 if( NOT TARGET glfw )
     message( STATUS "${SON8PROJ}: `glfw` target does not exist try to find it" )
@@ -20,4 +22,4 @@ if( NOT TARGET glfw )
     endif()
 endif()
 
-target_link_libraries( ${SON8PROJ} INTERFACE glfw )
+target_link_libraries( ${SON8PROJ} PRIVATE glfw )
