--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,3 +7,4 @@ add_subdirectory( source )
 add_library( son8::${PROJECT_NAME} ALIAS ${SON8PROJ} )
 target_include_directories( ${SON8PROJ} PUBLIC include )
 target_compile_features( ${SON8PROJ} PUBLIC cxx_std_17 )
+target_link_libraries( ${SON8PROJ} PUBLIC son8::overglad )
